--- a/src/index.html
+++ b/src/index.html
@@ -2,16 +2,18 @@
 <style type="text/css">
   body {
     font-family: monospace;
-    width: 5000;
     overflow: none;
   }
 
-  #msg {
-    left: -200px;
+  #msgDiv {
+    position:relative;
+    left: 0px;
+    width: 100000px;
+    font-size: 100px;
   }
 </style>
 <body>
   <script src="./index.js"></script>
-  <div id="msg"></div>
+  <div id="msgDiv"></div>
 </body>
 </html>
