--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,8 @@
     left: 0px;
     width: 100000px;
     font-size: 100px;
+    vertical-align: middle;
+    margin: 100px 0;
   }
 </style>
 <body>
