--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,13 @@
     vertical-align: middle;
     margin: 100px 0;
   }
+
+  .emoji {
+    height: 35px;
+    display: inline;
+    vertical-align: middle;
+    margin: -1000000% 0;
+  }
 </style>
 <body>
   <script src="./index.js"></script>
